# NFDRS4-GUI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
data/: 2024-03-CHEY-firewx.csv
include/NFDRSGUI/: FW21Decoder.h  Meteogram.h  ModelRunners.h  NFDRSGUI.h  Style.h  data.h  emscripten_loop.h  imgui_conf.h
scripts/: csv_to_header.py
src/NFDRSGUI/: FW21Decoder.cpp  NFDRSGUI.cpp  deadfuel_settings.cpp  fuelmoistures.cpp  livefuel_settings.cpp  main.cpp  meteogram.cpp  nfdrs_settings.cpp
